--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.min-h-80 {
+    min-height: 80vh;
+}
